provarAnt/00D190000000ZY2EAM/objects/Premium__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Factor</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Premium</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Premium Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>